Fix sub menu scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1470,10 +1470,10 @@ html.dark {
 .menu-column__list {
   margin-top: 19px;
 }
-.menu-column__item:hover .sub-menu {
+.menu-column__item--active .sub-menu {
   display: grid;
 }
-.menu-column__item:hover > .menu-column__link {
+.menu-column__item:hover > .menu-column__link, .menu-column__item--active > .menu-column__link {
   color: #0071dc;
   font-weight: 500;
 }
